--- a/oauth2-in-app-auth/pom.xml
+++ b/oauth2-in-app-auth/pom.xml
@@ -9,19 +9,18 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.example</groupId>
-	<artifactId>oauth2-opa</artifactId>
+	<artifactId>oauth2-in-app-auth</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>oauth2-opa</name>
+	<name>oauth2-in-app-auth</name>
 	<description>Demo project for Spring Boot</description>
 	<properties>
 		<java.version>11</java.version>
 	</properties>
 	<dependencies>
 		<dependency>
-			<groupId>org.openpolicyagent</groupId>
-			<artifactId>voter</artifactId>
-			<version>1.0-SNAPSHOT</version>
-		</dependency>		
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-rest</artifactId>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-oauth2-client</artifactId>
