--- a/oauth2-opa/pom.xml
+++ b/oauth2-opa/pom.xml
@@ -16,7 +16,13 @@
 	<properties>
 		<java.version>11</java.version>
 	</properties>
-	<dependencies>		
+	<dependencies>
+		<dependency>
+		  <groupId>com.bisnode.opa</groupId>
+		  <artifactId>opa-filter-spring-boot-starter</artifactId>
+		  <version>1.3.0</version>
+		</dependency>
+					
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-oauth2-client</artifactId>
