--- a/oauth2-opa/src/main/resources/application.yml
+++ b/oauth2-opa/src/main/resources/application.yml
@@ -1,6 +1,6 @@
-spring:
-  security:
-    oauth2:
-      resourceserver:
-        jwt:
-          issuer-uri: http://localhost:9080/auth/realms/sample
+# spring:
+#   security:
+#     oauth2:
+#       resourceserver:
+#         jwt:
+#           issuer-uri: http://localhost:9080/auth/realms/sample
