--- a/oauth2-in-app-auth/src/main/resources/application.yml
+++ b/oauth2-in-app-auth/src/main/resources/application.yml
@@ -5,3 +5,5 @@ spring:
         jwt:
           issuer-uri: http://localhost:9080/auth/realms/sample
           jwk-set-uri: http://localhost:9080/auth/realms/sample/protocol/openid-connect/certs
+  h2:
+    console:      enabled: true
