--- a/oauth2-in-app-auth/src/main/resources/application.yml
+++ b/oauth2-in-app-auth/src/main/resources/application.yml
@@ -7,3 +7,5 @@ spring:
           jwk-set-uri: http://localhost:9080/auth/realms/sample/protocol/openid-connect/certs
   h2:
     console:      enabled: true
+  jpa:
+    generate-ddl: true   
