switched to spring-boot 2.4.8 to get h2 data.sql to work

--- a/oauth2-in-app-auth/src/main/resources/application.yml
+++ b/oauth2-in-app-auth/src/main/resources/application.yml
@@ -6,6 +6,9 @@ spring:
           issuer-uri: http://localhost:9080/auth/realms/sample
           jwk-set-uri: http://localhost:9080/auth/realms/sample/protocol/openid-connect/certs
   h2:
-    console:      enabled: true
+    console:
+      enabled: true
   jpa:
-    generate-ddl: true   
+    generate-ddl: true
+    hibernate:      ddl-auto: create       
+    
