--- a/oauth2-opa/src/main/resources/application.yml
+++ b/oauth2-opa/src/main/resources/application.yml
@@ -4,3 +4,12 @@
 #       resourceserver:
 #         jwt:
 #           issuer-uri: http://localhost:9080/auth/realms/sample
+
+spring:
+  h2:
+    console:
+      enabled: true
+  jpa:
+    generate-ddl: true
+    hibernate:
+      ddl-auto: create    
