--- a/oauth2-in-app-auth/pom.xml
+++ b/oauth2-in-app-auth/pom.xml
@@ -65,6 +65,16 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+			<plugin>
+				<groupId>com.google.cloud.tools</groupId>
+				<artifactId>jib-maven-plugin</artifactId>
+				<version>3.1.3</version>
+				<configuration>
+				  <to>
+				    <image>oauth2-in-app-auth</image>
+				  </to>
+				</configuration>
+			</plugin>			
 		</plugins>
 	</build>
 
