added deployments pods and services for kubernetes

--- a/pod-opa-ressource-server.yml
+++ b/pod-opa-ressource-server.yml
@@ -12,7 +12,7 @@ spec:
 
   containers:
 
-  - name: ressorce-server
+  - name: ressource-server
     image: oauth2-opa
     ports:
     - name: http
