--- a/deployment-opa.yml
+++ b/deployment-opa.yml
@@ -1,9 +1,9 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: opa-ressource-server
+  name: opa
   labels:
-    app: opa-ressource-server
+    app: opa
 spec:
   replicas: 1
   selector:
@@ -16,7 +16,6 @@ spec:
       name: opa
     spec:
       containers:
-
       - name: opa
         image: openpolicyagent/opa:latest
         ports:
@@ -35,9 +34,3 @@ spec:
       - name: example-policy
         configMap:
           name: example-policy
-
-      - name: ressource-server
-        image: oauth2-opa
-        ports:
-        - name: http
-          containerPort: 8080          
