--- a/service-opa-ressorce-server.yml
+++ b/service-opa-ressorce-server.yml
@@ -1,13 +1,13 @@
 kind: Service
 apiVersion: v1
 metadata:
-  name: opa-ressorce-server
+  name: opa-ressource-server
   labels:
-    app: opa-ressorce-server
+    app: opa-ressource-server
 spec:
   type: NodePort
   selector:
-    app: opa-ressorce-server
+    app: opa-ressource-server
   ports:
     - name: http
       protocol: TCP
