--- a/deployment-ressource-server-in-app.yml
+++ b/deployment-ressource-server-in-app.yml
@@ -19,4 +19,6 @@ spec:
         image: oauth2-in-app-auth:latest
         imagePullPolicy: IfNotPresent
         ports:
-        - containerPort: 8080
+        ports:
+        - name: http
+          containerPort: 8080
