--- a/service-ressource-server-in-app.yml
+++ b/service-ressource-server-in-app.yml
@@ -1,13 +1,13 @@
 kind: Service
 apiVersion: v1
 metadata:
-  name: oauth2-in-app-auth-deployment
+  name: oauth2-in-app-auth
   labels:
-    app: oauth2-in-app-auth-deployment
+    app: oauth2-in-app-auth
 spec:
   type: NodePort
   selector:
-    app: oauth2-in-app-auth-deployment
+    app: oauth2-in-app-auth
   ports:
     - name: http
       protocol: TCP
