--- a/oauth2-in-app-auth/pom.xml
+++ b/oauth2-in-app-auth/pom.xml
@@ -76,6 +76,7 @@
 				  <container>
 				  	<ports>
 				  		<port>8080</port>
+				  		<port>9080</port>				  		
 				  	</ports>				  
 				  </container>
 				</configuration>
