--- a/keycloak.yaml
+++ b/keycloak.yaml
@@ -7,8 +7,8 @@ metadata:
 spec:
   ports:
   - name: http
-    port: 8080
-    targetPort: 8080
+    port: 9080
+    targetPort: 9080
   selector:
     app: keycloak
   type: LoadBalancer
@@ -32,7 +32,7 @@ spec:
     spec:
       containers:
       - name: keycloak
-        image: quay.io/keycloak/keycloak:15.0.2
+        image: quay.io/keycloak/keycloak:12.0.4
         env:
         - name: KEYCLOAK_USER
           value: "admin"
@@ -40,12 +40,16 @@ spec:
           value: "admin"
         - name: PROXY_ADDRESS_FORWARDING
           value: "true"
+        - name: DB_VENDOR
+          value: "h2"
         ports:
         - name: http
-          containerPort: 8080
+          containerPort: 9080
         - name: https
-          containerPort: 8443
+          containerPort: 9443
+        args:
+        - "-Djboss.socket.binding.port-offset=1000"
         readinessProbe:
           httpGet:
             path: /auth/realms/master
-            port: 8080
+            port: 9080
