--- a/oauth2-in-app-auth/src/main/resources/application.yml
+++ b/oauth2-in-app-auth/src/main/resources/application.yml
@@ -3,8 +3,8 @@ spring:
     oauth2:
       resourceserver:
         jwt:
-          issuer-uri: http://localhost:9080/auth/realms/sample
-          jwk-set-uri: http://localhost:9080/auth/realms/sample/protocol/openid-connect/certs
+          issuer-uri: http://keycloak:9080/auth/realms/Sample
+          jwk-set-uri: http://keycloak:9080/auth/realms/sample/protocol/openid-connect/certs
   h2:
     console:
       enabled: true
