--- a/oauth2-opa/pom.xml
+++ b/oauth2-opa/pom.xml
@@ -61,6 +61,21 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+			<plugin>
+				<groupId>com.google.cloud.tools</groupId>
+				<artifactId>jib-maven-plugin</artifactId>
+				<version>3.1.3</version>
+				<configuration>
+				  <to>
+				    <image>oauth2-in-app-auth</image>
+				  </to>
+				  <container>
+				  	<ports>
+				  		<port>8080</port>
+				  	</ports>				  
+				  </container>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
 
