--- a/kubernetes-configs/ressource-server-in-app-auth.yaml
+++ b/kubernetes-configs/ressource-server-in-app-auth.yaml
@@ -22,3 +22,19 @@ spec:
         ports:
         - name: http
           containerPort: 8080
+---
+kind: Service
+apiVersion: v1
+metadata:
+  name: oauth2-in-app-auth
+  labels:
+    app: oauth2-in-app-auth
+spec:
+  type: NodePort
+  selector:
+    app: oauth2-in-app-auth
+  ports:
+    - name: http
+      protocol: TCP
+      port: 8080
+      targetPort: 8080                
