--- a/oauth2-opa/pom.xml
+++ b/oauth2-opa/pom.xml
@@ -67,7 +67,7 @@
 				<version>3.1.3</version>
 				<configuration>
 				  <to>
-				    <image>oauth2-in-app-auth</image>
+				    <image>oauth2-opa</image>
 				  </to>
 				  <container>
 				  	<ports>
