--- a/kubernetes-configs/ressource-server-and-opa.yaml
+++ b/kubernetes-configs/ressource-server-and-opa.yaml
@@ -1,24 +1,28 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: ressource-server-and-opa
+  name: ressource-server-opa
   labels:
-    app: ressource-server-and-opa
+    app: ressource-server-opa
 spec:
-  replicas: 1
+  replicas: 2
   selector:
     matchLabels:
-      app: ressource-server-and-opa
+      app: ressource-server-opa
   template:
     metadata:
       labels:
-        app: ressource-server-and-opa
-      name: ressource-server-and-opa
+        app: ressource-server-opa
     spec:
       containers:
+      - name: oauth2-opa
+        image: oauth2-opa:latest
+        imagePullPolicy: IfNotPresent
+        ports:
+        - containerPort: 8080
 
       - name: opa
-        image: openpolicyagent/opa:latest
+        image: openpolicyagent/opa:0.31.0
         ports:
         - name: http
           containerPort: 8181
@@ -35,29 +39,19 @@ spec:
       - name: example-policy
         configMap:
           name: example-policy
-
-      - name: ressource-server
-        image: oauth2-opa:latest
-        ports:
-        - name: http
-          containerPort: 8080          
 ---
 kind: Service
 apiVersion: v1
 metadata:
-  name: ressource-server-and-opa
+  name: ressource-server-opa
   labels:
-    app: ressource-server-and-opa
+    app: ressource-server-opa
 spec:
   type: NodePort
   selector:
-    app: ressource-server-and-opa
+    app: ressource-server-opa
   ports:
     - name: http
       protocol: TCP
-      port: 8181
-      targetPort: 8181
-    - name: http
-      protocol: TCP
       port: 8080
-      targetPort: 8080                
+      targetPort: 8080        
