--- a/kubernetes-configs/postgres.yaml
+++ b/kubernetes-configs/postgres.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
         - name: postgresql-db
-          image: postgres:latest
+          image: postgres:13.4
           volumeMounts:
             - name: postgresql-db-disk
               mountPath: /data
