--- a/kubernetes-configs/ressource-server-and-opa.yaml
+++ b/kubernetes-configs/ressource-server-and-opa.yaml
@@ -47,7 +47,7 @@ metadata:
   labels:
     app: ressource-server-opa
 spec:
-  type: NodePort
+  type: LoadBalancer
   selector:
     app: ressource-server-opa
   ports:
